# onshape-to-robot-sim

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
onshape_to_robot/onshape_api/: client.py  onshape_tree.py  sdf_elements.py
onshape_to_robot/onshape_to_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
onshape_to_robot/sdf/: sdf_description.py  sdf_elements.py
onshape_to_sim/: example_config.json  robot_description.py  run_onshape_to_sim.py  utils.py
onshape_to_sim/onshape_api/: onshape_tree.py
onshape_to_sim/onshape_to_sim/: onshape_to_robot.py  utils.py
onshape_to_sim/onshape_to_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
onshape_to_sim/onshape_to_sim/onshape_api/: client.py  onshape.py  onshape_tree.py  test_config.json  test_something.json  utils.py
onshape_to_sim/onshape_to_sim/sdf/: element_data.py  sdf_description.py  sdf_elements.py  sdf_tree.py
onshape_to_sim/onshape_to_sim/test/: check_rots.py  obj_viewer.py  output.txt  save_json.py  test_onshape_api.py  test_onshape_tree.py  test_sdf_elements.py  test_stl_conversions.py  test_stl_exporter.py  throwy_dict.pickle  throwy_hand_dict.pickle  throwy_hand_tree.pickle  throwy_rigid_bodies.pickle  throwy_tree.pickle
onshape_to_sim/test/: save_json.py
